Correções de textos e troca de urls nas vilas

--- a/src/app/pages/civil-action/civil-action.component.html
+++ b/src/app/pages/civil-action/civil-action.component.html
@@ -31,7 +31,7 @@
 					<p class="font-124">Em 2013, o MPF e a DPU atuaram em favor das comunidades afetadas pelas obras dessas rodovias e moveram a ACP (Ação Civil Pública nº 57367-09.2013.4.01.3800) que deu origem ao Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381. O Concilia BR-381 e Anel é uma iniciativa da Justiça Federal e do Departamento Nacional de Infraestrutura de Transportes (DNIT), implementado desde 2014.</p>
 
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-6" style="margin-top: 5%;">
 					<img src="assets/images/fotoacp2.png" alt="" style="margin-bottom:20px;">
 					<!-- <p class="font-124">O Concilia BR-381 e Anel é uma iniciativa da Justiça Federal e do Departamento Nacional de Infraestrutura de Transportes (DNIT), implementado desde 2014.</p> -->
 					<p class="font-124">Ministério Público Federal (MPF), Defensoria Pública da União (DPU), Município de Belo Horizonte, Companhia Urbanizadora e de Habitação de Belo Horizonte (URBEL) e Comunidade de Moradores de Áreas de Risco (CMAR) são parceiros do Concilia BR 381 e Anel.</p>
