--- a/src/app/pages/communyts/communyts.component.html
+++ b/src/app/pages/communyts/communyts.component.html
@@ -36,8 +36,8 @@
 							<img src="assets/images/selagem01.jpg" alt="">
                         </div><br>
                         <div class="col-sm-6">
-                            <p class="font-124">Um dos diferenciais desse programa de reassentamento é o acompanhamento das famílias em todo o processo de mudança. São levadas em consideração as especificidades de cada núcleo familiar como a presença de idosos, adultos, crianças, adolescentes ou pessoas portadoras de algum tipo de deficiência.</p>
-                            <p class="font-124">Também é feito um trabalho social nas comunidades e os moradores são inseridos em atividades sociais e educativas de saúde, assistência social, geração de emprego e renda, cultura e educação.</p>
+                            <p class="font-124">Um dos diferenciais desse programa de reassentamento é o acompanhamento das famílias durante todo o processo: Antes da mudança e por um período após. Esse trabalho assistencial leva em consideração as especificidades de cada núcleo familiar como a presença de idosos, adultos, crianças, adolescentes ou pessoas portadoras de algum tipo de deficiência.</p>
+                            <p class="font-124">Também é feito um trabalho de assistência social junto aos moradores das comunidades para que sejam preparados para uma nova vida depois de reassentados esse trabalho leva em consideração as necessidades sociais e educativas dos beneficiários do programa, bem como a capacitação para inserção no mercado de trabalho.</p>
                         </div>
                     </div>
                 </div>
@@ -60,13 +60,13 @@
 		<div class="row">
 			<div class="main_about_area sections" style="padding-top:0;padding-bottom: 85px;">
 				<div class="col-sm-6">
-					<p class="font-124">As famílias das comunidades beneficiadas pelo Concilia BR-381 e Anel passam pelo processo de cadastramento e selagem das moradias. Durante essa ação, as moradias recebem um selo (que dá origem ao nome do processo) com um número de identificação do imóvel. Estas e outras informações fornecerão subsídios para a Justiça Federal nas audiências de conciliação. Todas as moradias que participam do cadastramento recebem um documento de identificação e um selo afixado na porta da residência com uma sequência numérica.</p>
-					<p class="font-124">Durante a atividade, é feito um levantamento arquitetônico, medição dos imóveis, avaliação das benfeitorias das moradias, análise de vulnerabilidade dos moradores, cadastro social das famílias, croqui técnico e registro fotográfico. Em termos genéricos, pode-se compreender esse processo como um registro das realidades física e social identificadas em campo.</p>
-					<p class="font-124">Após o trabalho de medição técnica e avaliação social, é feita a aplicação do diagnóstico social - cadastro mais extenso com informações referentes às necessidades da Vila. Com a finalização da selagem é feito o congelamento das moradias situadas às margens da rodovia.</p>
+					<p class="font-124">As famílias das comunidades beneficiadas pelo Concilia BR-381 e Anel passam pelo processo de cadastramento e selagem das moradias. Durante essa atividade, as moradias recebem um selo (que dá origem à expressão "selagem") com um número de identificação do imóvel. As informações levantadas pelo cadastramento fornecerão subsídios para a Justiça Federal nas audiências de conciliação. Todas as moradias que participam do cadastramento recebem um documento de identificação e um selo com uma sequência numérica afixado à porta da residência.</p>
+					<p class="font-124">Durante o cadastramento também é feito um levantamento arquitetônico, medição dos imóveis, avaliação das benfeitorias das moradias, análise de vulnerabilidade dos moradores, cadastro social das famílias, croqui técnico e registro fotográfico. Em termos genéricos, pode-se compreender esse processo como um registro das realidades física e social identificadas em campo.</p>
+					<p class="font-124">Após o trabalho de medição técnica e avaliação social, é feita a aplicação do diagnóstico social - cadastro mais extenso com informações referentes às necessidades da Vila. Com a finalização da selagem, as moradias ficam "congeladas" e os moradores são orientados a não aumentar suas casas nem fazer modificações estética ou estruturais.
+					</p>
 				</div>
 				<div class="col-sm-6">
-					<p class="font-124">Os moradores são orientados a não expandir suas edificações nem realizar nenhuma modificação estética ou estrutural.</p>
-					<p class="font-124">As benfeitorias feitas após a data da selagem não serão levadas em consideração na avaliação do imóvel durante as Audiências de Conciliação. Os problemas identificados durante a selagem são registrados pelos técnicos e, aqueles que necessitam de atendimentos sistematizados, são direcionados às equipes responsáveis.</p>
+					<p class="font-124">As benfeitorias feitas após a data da selagem não serão levadas em consideração na avaliação do imóvel durante as audiências de conciliação. Os problemas identificados durante a selagem são registrados e, aqueles que necessitam de atendimentos sistematicos são direcionados às equipes técnicas responsáveis.</p>
 					<img src="assets/images/selagem02.jpg" alt="">
 				</div>
 			</div>
