--- a/src/app/pages/home/about/about.component.html
+++ b/src/app/pages/home/about/about.component.html
@@ -121,14 +121,15 @@
 
 													<p style="font-size: 1.24rem;">Os moradores cadastrados contam com atividades sociais e educativas voltadas para a geração de emprego e renda e preparação para sua insersão no novo contexto social. O Programa trabalha com três modalidades de reassentamento: indenização, compra assistida e nova unidade habitacional.</p>
 
-													<p style="font-size: 1.24rem;">Na etapa do reassentamento iniciada em 2017, o Concilia BR-381 e Anel oferece duas modalidades de aquisição: compra assistida e indenização. Na modalidade compra assistida, é feita uma análise de habitabilidade de acordo com o perfil de cada núcleo familiar.</p>
+													<p style="font-size: 1.24rem;">Na etapa do reassentamento iniciada em 2017, o Concilia BR-381 e Anel oferece duas modalidades de aquisição: compra assistida e indenização. Na modalidade compra assistida, é feita uma análise de habitabilidade do imóvel de acordo com o perfil de cada núcleo familiar.</p>
 
-													<p style="font-size: 1.24rem;">O DNIT é o responsável pela indenização e aquisição de imóveis disponíveis em Belo Horizonte, região metropolitana e outros municípios.</p>
+													<p style="font-size: 1.24rem;">O DNIT é o responsável pela indenização e aquisição de imóveis disponíveis em Belo Horizonte, região metropolitana e outros municípios. A etapa de 2017 se caracteriza pelo reassentamento prioritário de 264 famílias.</p>
+
 												</div>
 											</div>
 
 											<div class="col-sm-6">
-												<p style="font-size: 1.24rem;">A etapa de 2017 se caracteriza pelo reassentamento prioritário de 264 famílias. Para 2018, está previsto o reassentamento de outras 1.090 famílias. As ações são pautadas em um Plano de Providências, documento que orienta e ajuda a viabilizar o reassentamento definitivo das famílias.</p>
+												<p style="font-size: 1.24rem;">Para 2018, está previsto o reassentamento de outras 1.090 famílias. As ações são pautadas em um Plano de Providências, documento que orienta e ajuda a viabilizar o reassentamento definitivo das famílias.</p>
 												<div class="single_tab_img">
 													<img src="assets/images/reassentamento.jpg" alt="" />
 												</div>
@@ -150,16 +151,16 @@
 										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<p style="font-size: 1.24rem;">A principal função da Conciliação é a realização de um acordo que evite conflitos entre as partes. As partes envolvidas comunicam ao órgão competente, ou são chamadas por este Órgão, para que seja firmado um acordo, ou seja, para buscar a conciliação. A Justiça Federal marca uma audiência e, diante do conciliador, as partes entram em acordo e anunciam a solução encontrada.</p>
+													<p style="font-size: 1.24rem;">A principal função da conciliação é a realização de um acordo que evite conflitos entre as partes. As partes envolvidas comunicam ao órgão competente, ou são chamadas por este órgão, para que seja negociado um acordo que busque a  conciliação. A Justiça Federal marca uma audiência e, diante do conciliador, as partes entram em acordo e anunciam a solução encontrada.</p>
 
-													<p style="font-size: 1.24rem;">Os acordos firmados têm uma validade jurídica, uma vez que seus termos são levados à homologação judicial. A Conciliação é feita com cada família a ser removida e reassentada e os conciliadores podem fazer sugestões ou até mesmo propor soluções para o conflito.</p>
+													<p style="font-size: 1.24rem;">Os acordos firmados têm validade jurídica, uma vez que seus termos são levados à homologação judicial. A conciliação é feita com cada família a ser removida e reassentada e os conciliadores podem fazer sugestões ou até mesmo propor soluções que contemplem as necessidades dos moradores.</p>
 
-													<p style="font-size: 1.24rem;">Um Conselho Executivo composto por representantes das instituições parceiras do Concilia BR-381 e Anel, para deliberar e decidir sobre casos especificos e questões estratégicas. O resultado de suas deliberações é submetido ao juízo para homologação.</p>
+													<p style="font-size: 1.24rem;">Um Conselho Executivo composto por representantes das instituições parceiras do Concilia BR-381 e Anel foi criado para deliberar e decidir sobre casos especificos e questões estratégicas. O resultado de suas deliberações é submetido ao juízo para homologação.</p>
 												</div>
 											</div>
 
 											<div class="col-sm-6">
-												<div class="single_tab_img">
+												<div class="single_tab_img" style="margin-top: 5%;">
 													<img src="assets/images/conciliacao.jpg" alt="" />
 												</div>
 											</div>
