--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -28,7 +28,7 @@
 				</div>
 				<div class="row">
 					<p style="font-size: 1.24rem;margin-top:20px;padding:20px;">
-						Responsável pela contratação de empresas para elaboração dos projetos básico, executivo e para a execução das obras de adequação de capacidade da BR-381/MG no segmento que vai de Belo Horizonte a Governador Valadares. O trecho de 303 quilômetros foi dividido em 11 lotes para execução das obras, que incluem duplicação, melhoramentos e ampliação de capacidade e segurança.
+						Responsável pela contratação de empresas para elaboração dos projetos e para a execução das obras de adequação de capacidade da BR-381/MG no segmento que vai de Belo Horizonte a Governador Valadares. O trecho tem 303 quilômetros e foi dividido em 11 lotes para execução das obras, que incluem duplicação, melhoramentos e ampliação de capacidade e segurança.
 					</p>
 				</div>
 			</div>
@@ -54,7 +54,7 @@
 				</div>
 				<div class="row">
 					<p style="font-size: 1.24rem;margin-top:20px;padding:20px;">
-						A Defensoria Pública da União (DPU) em Minas Gerais é a instituição que, no exercício de sua missão constitucional (art. 134 da Carta Magna), presta assistência jurídica, individual e coletiva, à população vulnerável que vive às margens das rodovias federais. Atua em mutirões de conciliação e em atividades judiciais, administrativas e de mobilização das comunidades afetadas. Seu objetivo é garantir que o direito a uma moradia digna e adequada das famílias que ocupam as faixas de domínio e não edificante das rodovias seja respeitado. No momento em que essas famílias tiverem de ser compulsoriamente removidas, o órgão atua para que o processo ocorra de maneira humanizada, com observação de princípios fundamentais que vigoram no ordenamento jurídico brasileiro e em normas internacionais de direitos humanos.
+						A Defensoria Pública da União (DPU) em Minas Gerais é a instituição que, no exercício de sua missão constitucional (art. 134 da Carta Magna), presta assistência jurídica, individual e coletiva, à população vulnerável que vive às margens das rodovias federais. Atua em mutirões de conciliação e em atividades judiciais, administrativas e de mobilização das comunidades afetadas. Seu objetivo é garantir que o direito a uma moradia digna e adequada das famílias que ocupam as faixas de domínio e não edificante das rodovias seja respeitado. No momento em que essas famílias tiverem que ser compulsoriamente removidas, o órgão atua para que o processo ocorra de maneira humanizada, com observação de princípios fundamentais que vigoram no ordenamento jurídico brasileiro e em normas internacionais de direitos humanos.
 					</p>
 				</div>
 			</div>
@@ -97,7 +97,7 @@
 				</div>
 				<div class="row">
 					<p style="font-size: 1.24rem;margin-top:20px;padding:20px;">
-						O Ministério Público Federal é responsável por fiscalizar as obras da duplicação da BR-381 e Anel Rodoviário. Sua função é acompanhar os pagamentos, cronogramas, e ainda os impactos nos meios de transporte da obra.
+						O Ministério Público Federal é responsável por fiscalizar as obras da duplicação da BR-381 e Anel Rodoviário. Sua função é acompanhar os pagamentos, cronogramas e, ainda, os impactos nos meios de transporte da obra.
 					</p>
 				</div>
 			</div>
