--- a/src/app/pages/properties/properties.component.html
+++ b/src/app/pages/properties/properties.component.html
@@ -66,9 +66,9 @@
 										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<p style="font-size: 1.24rem;">A etapa de 2017 do Concilia BR 381 e Anel, voltada ao reassentamento de 264 famílias, deu prioridade àquelas sob regime de aluguel social. Nesta etapa, foi usada, prioritariamente, em especial para as comunidades Vila da Paz, Vila da Luz, Vila Pica-pau e Vila Bom Retiro, a modalidade de compra assistida.</p>
-													<p style="font-size: 1.24rem;">Para contemplar as famílias da maneira mais eficiente e rápida possível, foi criado Banco de Imóveis formado por aqueles disponíveis no mercado, no âmbito de algumas regiões no entorno da capital mineira (Belo Horizonte). Os imóveis também obedecem a critérios mínimos básicos definidos para as necessidades das famílias após análise e avaliação dos seus cadastros.</p>
-													<p style="font-size: 1.24rem;">Nesse caso da etapa de 2017, as famílias tiveram a possibilidade de escolher entre tipos de unidade habitacional como apartamentos e/ou casas.</p>
+													<p style="font-size: 1.24rem;">A etapa de 2017 do Concilia BR 381 e Anel, voltada ao reassentamento de 264 famílias, deu prioridade àquelas sob regime de aluguel social. Nesta etapa, a modalidade mais utilizada foi a de compra assistida, em especial para as comunidades vila da Paz, vila da Luz, vila Pica-pau e vila Bom Destino</p>
+													<p style="font-size: 1.24rem;">Para contemplar as famílias da maneira mais eficiente e rápida possível, foi criado um banco de imóveis formado por aqueles disponíveis no mercado, no âmbito de algumas regiões no entorno da capital mineira (Belo Horizonte). Os imóveis também obedecem a critérios mínimos básicos definidos para as necessidades das famílias após análise e avaliação dos seus cadastros.</p>
+													<p style="font-size: 1.24rem;">No caso da etapa de 2017, as famílias tiveram a possibilidade de escolher entre tipos de unidade habitacional como apartamentos e/ou casas.</p>
 													<p style="font-size: 1.24rem;">Levou-se em consideração, também, que muitas famílias usavam as dependências de suas moradias para estabelecer pequenos negócios, responsáveis pela geração de sua renda.</p>
 												</div>
 											</div>
