--- a/src/app/pages/community-detail/community-detail.component.html
+++ b/src/app/pages/community-detail/community-detail.component.html
@@ -4,13 +4,32 @@
             <div class="row">
                 <div class="col-sm-12 ">
 					<h1 style="text-align: -webkit-center;">
-						<img src="assets/images/banner_images/Cmar.png" alt="Logo do concilia" style="max-width:60%;margin-top: 150px;">
+						<img src="assets/images/banner_images/comunidades.png" alt="Logo do concilia" style="max-width:60%;margin-top: 150px;">
 					</h1>
 	            </div>
             </div>
         </div>
     </div>
 </section>
-<p>
-  community-detail works!
-</p>
+<section class="features" id="features">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="main_features_area sections">
+                    <div class="head_title">
+                        <h3 style="font-size: 3rem;">{{community?.title}}</h3>
+                        <div class="separator"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+							<img alt="" src="{{community?.image}}">
+                        </div><br>
+                        <div class="col-sm-6">
+                            <p class="font-124">{{community?.text}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
