--- a/src/app/pages/visual-identity/visual-identity.component.html
+++ b/src/app/pages/visual-identity/visual-identity.component.html
@@ -31,7 +31,7 @@
 				<div class="col-sm-6">
 					<p class="font-124">Esse manual de identidade visual tem como objetivo auxiliar a formação e manutenção da imagem institucional do Concilia BR-381 e Anel - Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381.</p>
 					<p class="font-124">As orientações contidas nesse documento facilitam a fixação da marca e a comunicação com o público em geral, além de padronizar e direcionar sua aplicabilidade em peças gráficas e materiais de uso cotidiano.</p>
-					<p class="font-124">A correta aplicação da marca, independente da mídia, facilita a sua identificação por parte do público-alvo tornando, assim, a comunicação mais eficiente e, consequentemente, gerando mais resultados. Dessa forma, não é permitida qualquer alteração conceitual feita isoladamente, já que isso pode interferir no conceito e na qualidade da marca.</p>
+					<p class="font-124">A correta aplicação da marca, independente da mídia, facilita a sua identificação por parte do público-alvo, o que torna a comunicação mais eficiente. Dessa forma, não é permitida qualquer alteração conceitual feita isoladamente, já que isso pode interferir no conceito e na qualidade da marca.</p>
 					<p class="font-124">Para não comprometer a legibilidade e zelando pelo uso correto da marca, foram criadas regras de utilização que estão disponíveis no arquivo abaixo. Caso precise da logomarca em alta resolução, entre em contato conosco.</p>
 				</div>
 
