--- a/src/app/pages/home/counter-up/counter-up.component.html
+++ b/src/app/pages/home/counter-up/counter-up.component.html
@@ -3,14 +3,15 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12">
-					<div class="main_counter_area text-center">
+					<div class="main_counter_area text-center" style="padding-bottom: 5%;">
 						<div class="row">
 							<div *ngFor="let counter of counters"class="single_counter border_right">
 								<div class="col-sm-3 col-xs-12" style="">
-									<div class="single_counter_item">
+									<img src="{{counter.image}}" title="Concilia BR-381 e Anel" style="position: inherit;">
+									<div class="single_counter_item" style="position: relative;top: -70px;">
 										<h2 class="count" [attr.data-count]="counter.num">0</h2>
 										<i class="icon icon-thumbs-up"></i>
-										<p class="margin-top-20" style="font-size: 2rem;">{{counter.text}}</p>
+										<p class="margin-top-20" style="font-size: 2rem;    text-align: center;">{{counter.text}}</p>
 									</div>
 								</div>
 							</div>
