--- a/src/app/pages/home/about/about.component.html
+++ b/src/app/pages/home/about/about.component.html
@@ -57,7 +57,7 @@
 											<div class="col-sm-6">
 												<div class="single_tab_content">
 
-													<p style="font-size: 1.24rem;">O Anel Rodoviário de Belo Horizonte e a BR-381 Norte são importantes rodovias para Minas Gerais, onde transitam cerca de 154 mil veículos por dia, segundo dados de 2013 da Polícia Rodoviária Federal. O tráfego existente já ultrapassou o volume planejado para a rodovia quando de sua contrução, em 1950.</p>
+													<p style="font-size: 1.24rem;">O Anel Rodoviário de Belo Horizonte e a BR-381 Norte são importantes rodovias para Minas Gerais, onde transitam cerca de 160 mil veículos por dia, segundo dados de 2016 da Polícia Rodoviária Federal(PRF). O tráfego existente já ultrapassou o volume planejado para a rodovia quando de sua construção, em 1950.</p>
 
 													<p style="font-size: 1.24rem;">De acordo com a PRF, os 27 km do Anel Rodoviário de Belo Horizonte e os 303 km da BR-381 Norte (trecho de BH a Governador Valadares) são parte da malha rodoviária mineira com o maior índice de acidentes no estado. Para aumentar a capacidade de tráfego das rodovias, foram projetadas obras de melhoria em diversos trechos. A execução das obras depende da remoção de muitas famílias que ocuparam as faixas de domínio e passaram a viver às margens das rodovias.</p>
 												</div>
@@ -87,7 +87,7 @@
 
 													<p style="font-size: 1.24rem;">O Concilia BR-381 e Anel - Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381 - é uma iniciativa da Justiça Federal e do Departamento Nacional de Infraestrutura de Transportes (DNIT). Ele teve início em 2013, fruto de uma Ação Civil Pública (ACP nº 57367-09.2013.4.01.3800) ajuizada pelo Ministério Público Federal (MPF) e Defensoria Pública da União (DPU), que se uniram em favor das diversas comunidades afetadas pelas obras na BR-381 e no Anel Rodoviário.</p>
 
-													<p style="font-size: 1.24rem;">O Programa consiste em remover e reassentar os moradores que residem na faixa de domínio das rodovias. O Concilia realiza acompanhamento multidisciplinar das famílias em todo processo de desapropriação e reassentamento (Pré Morar e Pós Morar). As atividades tiveram início em 2014 e contam com parcerias de instituições públicas e apoio da sociedade civil organizada.</p>
+													<p style="font-size: 1.24rem;">O Programa consiste em remover e reassentar os moradores que residem na faixa de domínio das rodovias. O Concilia BR-381 e Anel realiza acompanhamento multidisciplinar das famílias em todo processo de desapropriação e reassentamento (Pré Morar e Pós Morar). As atividades tiveram início em 2014 e contam com parcerias de instituições públicas e apoio da sociedade civil organizada.</p>
 												</div>
 											</div>
 
@@ -124,7 +124,7 @@
 											</div>
 
 											<div class="col-sm-6">
-												<p style="font-size: 1.24rem;">Para 2018, está previsto o reassentamento de outras 1.090 famílias. As ações são pautadas em um Plano de Providências, documento que orienta e ajuda a viabilizar o reassentamento definitivo das famílias.</p>
+												<p style="font-size: 1.24rem;">Para 2018, está previsto o planejamento para o reassentamento de outras 1.090 famílias. As ações são pautadas em um Plano de Providências, documento que orienta e ajuda a viabilizar o reassentamento definitivo das famílias.</p>
 												<div class="single_tab_img">
 													<img src="assets/images/reassentamento.jpg" alt="" />
 												</div>
