--- a/src/app/pages/properties/properties.component.html
+++ b/src/app/pages/properties/properties.component.html
@@ -230,7 +230,7 @@
 
 											<div class="col-sm-6">
 												<div class="single_tab_img">
-													<img src="assets/images/embreve.png" alt="" />
+													<img src="assets/images/localizacao.jpg" alt="" />
 												</div>
 											</div>
 										</div>
