Upgrade nas estruturas do site

--- a/src/app/pages/action-plan/action-plan.component.html
+++ b/src/app/pages/action-plan/action-plan.component.html
@@ -73,7 +73,16 @@
 					</ul>
 				</div>
 				<div class="col-sm-6">
-						<img src="assets/images/plano_providencias.jpg" alt="" style="padding-top:10%;max-width: inherit;">
+					<span class="concilia-credit" style="padding-top:10%;">
+						<i class="fa fa-user"></i>
+						&nbsp;&nbsp;Felipe Chimicatti
+					</span>
+					<img src="assets/images/plano_providencias.jpg" alt="" style="max-width: inherit;">
+					<span class="concilia-caption">
+						<i class="fa fa-camera"></i>
+						&nbsp;&nbsp;Moradias às margens de uma das vias mais movimentadas do país: O Anel Rodoviário de BH.
+					</span>
+
 				</div>
 			</div>
 		</div>
