--- a/src/app/pages/cmar/cmar.component.html
+++ b/src/app/pages/cmar/cmar.component.html
@@ -24,7 +24,16 @@
                 <div class="main_features_area sections" style="padding-top: 25px;padding-bottom: 100px;">
                     <div class="row">
                         <div class="col-sm-6">
-							<img src="assets/images/cmar001.png" alt="" style="margin-top:5%;">
+							<span class="concilia-credit" style="margin-top:5%;">
+								<i class="fa fa-user"></i>
+								&nbsp;&nbsp;CMAR
+							</span>
+							<img src="assets/images/cmar001.png" alt="">
+							<span class="concilia-caption">
+								<i class="fa fa-camera"></i>
+								&nbsp;&nbsp;Mães do Anel, em 2013, durante passeata em defesa de todos aqueles que tiveram suas vidas interrompidas.
+							</span>
+
                         </div><br>
                         <div class="col-sm-6">
                             <p class="font-124">O movimento Comunidade de Moradores em Áreas de Risco (CMAR) se constituiu após a divulgação da notificação de desapropriação dos moradores do Anel Rodoviário de Belo Horizonte em função das obras de revitalização da via.</p>
@@ -46,7 +55,16 @@
 					<p class="font-124">No segundo semestre de 2016, o CMAR contava com a participação das Vila da Paz, Vila da Luz, Vila São José, Madre Gertrudes, Vila Aldeia, Vila Nova Paraíso, Vila Biquinha, Vila da Rua Professor Paixão e Pátio da Estação, no movimento em favor da desapropriação e reassentamento humanizados, consolidado no programa Concilia BR-381 e Anel.</p>
 				</div>
 				<div class="col-sm-6">
-						<img src="assets/images/cmar002.png" alt="" >
+					<span class="concilia-credit">
+						<i class="fa fa-user"></i>
+						&nbsp;&nbsp;CMAR
+					</span>
+					<img src="assets/images/cmar002.png" alt="" >
+					<span class="concilia-caption">
+						<i class="fa fa-camera"></i>
+						&nbsp;&nbsp;Reunião com o Ministério Público Federal e Defensoria Pública da União, em 2009.
+					</span>
+
 				</div>
 			</div>
 		</div>
