--- a/src/app/pages/criteria/criteria.component.html
+++ b/src/app/pages/criteria/criteria.component.html
@@ -22,7 +22,16 @@
 					</div>
 					<div class="row">
 						<div class="col-sm-6">
-							<img src="assets/images/criterios_regras.jpg" alt="" style="padding-top:10%">
+							<span class="concilia-credit" style="padding-top:5%">
+								<i class="fa fa-user"></i>
+								&nbsp;&nbsp;Alexandre Dutra
+							</span>
+							<img src="assets/images/criterios_regras.jpg" alt="">
+							<span class="concilia-caption">
+								<i class="fa fa-camera"></i>
+								&nbsp;&nbsp;
+							</span>
+
 						</div><br>
 						<div class="col-sm-6">
 							<p class="font-124">Para que a execução do Concilia BR-381 e Anel seja viável e eficaz, é fundamental que sejam validados, por todas as partes, os critérios e regras que regerão cada uma das etapas do reassentamento das famílias que vivem na faixa de domínio da rodovia.</p>
