--- a/src/app/pages/home/about/about.component.html
+++ b/src/app/pages/home/about/about.component.html
@@ -37,6 +37,10 @@
 
 											<div class="col-sm-6">
 												<div class="single_tab_img">
+													<!-- <span>
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;Hevelyn
+													</span> -->
 													<img src="assets/images/mapa.jpg" alt="" />
 												</div>
 											</div>
@@ -65,7 +69,15 @@
 
 											<div class="col-sm-6">
 												<div class="single_tab_img">
+													<span class="concilia-credit">
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;Felipe Chimicatti
+													</span>
 													<img src="assets/images/whatsRoad.jpg" alt="" />
+													<span class="concilia-caption">
+														<i class="fa fa-camera"></i>
+														&nbsp;&nbsp;A revitalização das rodovias depende da remoção de muitas moradias construídas na faixa de domínio.
+													</span>
 												</div>
 											</div>
 										</div>
@@ -93,7 +105,15 @@
 
 											<div class="col-sm-6">
 												<div class="single_tab_img">
+													<span class="concilia-credit">
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;Felipe Chimicatti
+													</span>
 													<img src="assets/images/program.jpg" alt="" />
+													<span class="concilia-caption">
+														<i class="fa fa-camera"></i>
+														&nbsp;&nbsp;Algumas moradias chegam a ocupar a própria pista de acostamento da rodovia.
+													</span>
 												</div>
 											</div>
 										</div>
@@ -126,7 +146,15 @@
 											<div class="col-sm-6">
 												<p style="font-size: 1.24rem;">Para 2018, está previsto o planejamento para o reassentamento de outras 1.090 famílias. As ações são pautadas em um Plano de Providências, documento que orienta e ajuda a viabilizar o reassentamento definitivo das famílias.</p>
 												<div class="single_tab_img">
+													<span class="concilia-credit">
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;Helia Leomara
+													</span>
 													<img src="assets/images/reassentamento.jpg" alt="" />
+													<span class="concilia-caption">
+														<i class="fa fa-camera"></i>
+														&nbsp;&nbsp;Primeiras demolições na vila da Paz, em novembro de 2014.
+													</span>
 												</div>
 											</div>
 											<!--                                                        <div id="pentagon"></div>-->
@@ -156,7 +184,15 @@
 
 											<div class="col-sm-6">
 												<div class="single_tab_img" style="margin-top: 5%;">
+													<span class="concilia-credit">
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;Paula Lanza
+													</span>
 													<img src="assets/images/conciliacao.jpg" alt="" />
+													<span class="concilia-caption">
+														<i class="fa fa-camera"></i>
+														&nbsp;&nbsp;Uma das conciliações realizadas no Núcleo de Conciliação(NUCON), da Justiça Federal, em agosto de 2015.
+													</span>
 												</div>
 											</div>
 										</div>
