--- a/src/app/pages/home/counter-up/counter-up.component.html
+++ b/src/app/pages/home/counter-up/counter-up.component.html
@@ -11,7 +11,11 @@
 									<div class="single_counter_item" style="position: relative;top: -70px;">
 										<h2 class="count" [attr.data-count]="counter.num">0</h2>
 										<i class="icon icon-thumbs-up"></i>
-										<p class="margin-top-20" style="font-size: 2rem;    text-align: center;">{{counter.text}}</p>
+										<p class="margin-top-20" style="font-size: 2rem;  text-align: center;">{{counter.text}}</p>
+										<span style="color:white">
+											<i class="fa fa-info-circle" aria-hidden="true" style="font-size: small;color:white;"></i>
+											{{counter.info}}
+										</span>
 									</div>
 								</div>
 							</div>
