--- a/src/app/pages/visual-identity/visual-identity.component.html
+++ b/src/app/pages/visual-identity/visual-identity.component.html
@@ -26,7 +26,16 @@
 		<div class="row">
 			<div class="main_about_area sections" style="padding-top:0;padding-bottom:0;">
 				<div class="col-sm-6">
-						<img src="assets/images/capa-manual-marca.jpg" alt="" style="width: 500px;">
+					<span class="concilia-credit">
+						<i class="fa fa-user"></i>
+						&nbsp;&nbsp;Bruno Santos
+					</span>
+					<img src="assets/images/capa-manual-marca.jpg" alt="" style="width: 500px;">
+					<!-- <span class="concilia-caption">
+						<i class="fa fa-camera"></i>
+						&nbsp;&nbsp;
+					</span> -->
+
 				</div>
 				<div class="col-sm-6">
 					<p class="font-124">Esse manual de identidade visual tem como objetivo auxiliar a formação e manutenção da imagem institucional do Concilia BR-381 e Anel - Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381.</p>
