--- a/src/app/pages/communyts/communyts.component.html
+++ b/src/app/pages/communyts/communyts.component.html
@@ -33,7 +33,16 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
+							<span class="concilia-credit">
+								<i class="fa fa-user"></i>
+								&nbsp;&nbsp;Ana Marilce
+							</span>
 							<img src="assets/images/selagem01.jpg" alt="">
+							<span class="concilia-caption">
+								<i class="fa fa-camera"></i>
+								&nbsp;&nbsp;Moradores das vilas no pré-morar: Cursos, capacitações e oficinas antes do reassentamento definitivo.
+							</span>
+
                         </div><br>
                         <div class="col-sm-6">
                             <p class="font-124">Um dos diferenciais desse programa de reassentamento é o acompanhamento das famílias durante todo o processo: Antes da mudança e por um período após. Esse trabalho assistencial leva em consideração as especificidades de cada núcleo familiar como a presença de idosos, adultos, crianças, adolescentes ou pessoas portadoras de algum tipo de deficiência.</p>
@@ -67,7 +76,16 @@
 				</div>
 				<div class="col-sm-6">
 					<p class="font-124">As benfeitorias feitas após a data da selagem não serão levadas em consideração na avaliação do imóvel durante as audiências de conciliação. Os problemas identificados durante a selagem são registrados e, aqueles que necessitam de atendimentos sistematicos são direcionados às equipes técnicas responsáveis.</p>
+
+					<span class="concilia-credit">
+						<i class="fa fa-user"></i>
+						&nbsp;&nbsp;Felipe Chimicatti
+					</span>
 					<img src="assets/images/selagem02.jpg" alt="">
+					<span class="concilia-caption">
+						<i class="fa fa-camera"></i>
+						&nbsp;&nbsp;Equipe técnica durante o processo de selagem na vila da Luz, em julho de 2016.
+					</span>
 				</div>
 			</div>
 		</div>
