--- a/src/app/pages/executive-council/executive-council.component.html
+++ b/src/app/pages/executive-council/executive-council.component.html
@@ -26,7 +26,15 @@
 		<div class="row">
 			<div class="main_about_area sections" style="padding-top:0;padding-bottom:0;">
 				<div class="col-sm-6">
-					<img src="assets/images/executive_concil.jpg" alt="" style="margin-bottom:20px;">
+					<span class="concilia-credit">
+						<i class="fa fa-user"></i>
+						&nbsp;&nbsp;Alexandre Dutra
+					</span>
+					<img src="assets/images/executive_concil.jpg" alt="" >
+					<span class="concilia-caption" style="margin-bottom:20px;">
+						<i class="fa fa-camera"></i>
+						&nbsp;&nbsp;Primeira reunião do Conselho Executivo, em 1 de junho de 2017, na SREMG do DNIT.
+					</span>
 					<p class="font-124">Para minimizar os conflitos e facilitar o entendimento entre os diversos atores que compõem o Concilia BR-381 e Anel foi criado um Conselho Executivo, de caráter deliberativo, cuja principal função é buscar o consenso entre seus membros.</p>
 				</div>
 				<div class="col-sm-6">
