--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 			<div class="col-sm-6">
-				<div class="row">
+				<div class="row" style="height:112px;">
 					<a href="http://portalpbh.pbh.gov.br/pbh/ecp/comunidade.do?app=urbel" title="Clique aqui para acessar" target="_blank">
 						<div class="col-sm-6">
 							<img src="assets/images/logomarcas/urbel.png" alt="URBEL" />
