Novas correções no site

--- a/src/app/pages/cmar/cmar.component.html
+++ b/src/app/pages/cmar/cmar.component.html
@@ -31,7 +31,7 @@
 							<img src="assets/images/cmar001.png" alt="">
 							<span class="concilia-caption">
 								<i class="fa fa-camera"></i>
-								&nbsp;&nbsp;Mães do Anel, em 2013, durante passeata em defesa de todos aqueles que tiveram suas vidas interrompidas.
+								&nbsp;&nbsp;Mães do Anel, durante passeata em memóra das vítimas de acidentes na rodovia.
 							</span>
 
                         </div><br>
