--- a/src/app/pages/executive-council/executive-council.component.html
+++ b/src/app/pages/executive-council/executive-council.component.html
@@ -39,11 +39,11 @@
 				</div>
 				<div class="col-sm-6">
 					<!-- <p class="font-124">Para minimizar os conflitos e facilitar o entendimento entre os diversos atores que compõem o Concilia BR-381 e Anel foi criado um Conselho Executivo, de caráter deliberativo, cuja principal função é buscar o consenso entre seus membros.</p> -->
-					<p class="font-124">O Comitê acompanha das diversas ações do programa e é responsável pelo gerenciamento do Plano de Providências. Do plano, elaborado pelo DNIT, constam as ações e soluções para viabilizar o reassentamento das famílias Concilia.</p>
+					<p class="font-124">O Conselho acompanha as diversas ações do programa e é responsável pelo gerenciamento do Plano de Providências. Do plano, elaborado pelo DNIT, constam as ações e soluções para viabilizar o reassentamento das famílias Concilia.</p>
 				<!-- </div>
 				<div class="col-sm-6"> -->
 					<p class="font-124">Foram estabelecidos critérios e regras que orientam e facilitam a execução do Programa em cada uma de suas etapas. Essas diretrizes foram elaboradas pelos parceiros, revisadas pelos membros do Conselho Executivo e homologadas pela Justiça Federal.</p>
-					<p class="font-124">O Comitê é composto por um representante de cada instituição parceira do Concilia BR-381 e Anel, que se reunem periodicamente e em situações extraordinárias quando necessário.</p>
+					<p class="font-124">O Conselho é composto por um representante de cada instituição parceira do Concilia BR-381 e Anel e suas reuniões se realizam na Superintendencia Regional do Estado de Minas Gerais(SREMG) periodicamente e em situações extraordinárias quando necessário.</p>
 					<p class="font-124">As deliberações do Conselho Executivo vão desde a conciliação e o cumprimento do Acordo Judicial homologado em juízo até a análise de casos excepcionais e decisões estratégicas.</p>
 				</div>
 			</div>
