--- a/src/app/pages/home/about/about.component.html
+++ b/src/app/pages/home/about/about.component.html
@@ -76,7 +76,7 @@
 													<img src="assets/images/whatsRoad.jpg" alt="" />
 													<span class="concilia-caption">
 														<i class="fa fa-camera"></i>
-														&nbsp;&nbsp;A revitalização das rodovias depende da remoção de muitas moradias construídas na faixa de domínio.
+														&nbsp;&nbsp;A obra na rodovia depende da remoção das moradias construídas na faixa de domínio.
 													</span>
 												</div>
 											</div>
