--- a/src/app/pages/news-detail/news-detail.component.css
+++ b/src/app/pages/news-detail/news-detail.component.css
@@ -24,3 +24,19 @@
     border: 1px solid transparent;
     border-radius: 4px;
 }
+.separator {
+	height: 1px;
+	width: 300px;
+	margin: 20px 0px;
+	background: #444;
+	position: relative;
+}
+.separator:after {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	height: 2px;
+	width: 100px;
+	background: #ff7200;
+	content: "";
+}
