--- a/src/app/pages/communyts/communyts.component.html
+++ b/src/app/pages/communyts/communyts.component.html
@@ -40,13 +40,13 @@
 							<img src="assets/images/selagem01.jpg" alt="">
 							<span class="concilia-caption">
 								<i class="fa fa-camera"></i>
-								&nbsp;&nbsp;Moradores das vilas no pré-morar: Cursos, capacitações e oficinas antes do reassentamento definitivo.
+								&nbsp;&nbsp;Moradores no pré-morar: cursos e oficinas antes do reassentamento definitivo.
 							</span>
 
                         </div><br>
                         <div class="col-sm-6">
-                            <p class="font-124">Um dos diferenciais desse programa de reassentamento é o acompanhamento das famílias durante todo o processo: Antes da mudança e por um período após. Esse trabalho assistencial leva em consideração as especificidades de cada núcleo familiar como a presença de idosos, adultos, crianças, adolescentes ou pessoas portadoras de algum tipo de deficiência.</p>
-                            <p class="font-124">Também é feito um trabalho de assistência social junto aos moradores das comunidades para que sejam preparados para uma nova vida depois de reassentados esse trabalho leva em consideração as necessidades sociais e educativas dos beneficiários do programa, bem como a capacitação para inserção no mercado de trabalho.</p>
+                            <p class="font-124">Um dos diferenciais desse programa de reassentamento é o acompanhamento das famílias durante todo o processo: antes da mudança e por um período após. Esse trabalho assistencial leva em consideração as especificidades de cada núcleo familiar como a presença de idosos, adultos, crianças, adolescentes ou pessoas portadoras de algum tipo de deficiência.</p>
+                            <p class="font-124">O trabalho de assistência social junto aos moradores das comunidades procura prepará-los para uma nova vida depois de reassentados. A assistência social se dá através de cursos, palestras, oficinas e eventos que visam atender as necessidades sociais e educativas dos beneficiários, bem como capacitá-los para inserção no mercado de trabalho.</p>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
 					<img src="assets/images/selagem02.jpg" alt="">
 					<span class="concilia-caption">
 						<i class="fa fa-camera"></i>
-						&nbsp;&nbsp;Equipe técnica durante o processo de selagem na vila da Luz, em julho de 2016.
+						&nbsp;&nbsp;Processo de selagem na vila da Luz, julho de 2016.
 					</span>
 				</div>
 			</div>
