Atualizações em textos e no counter

--- a/src/app/pages/executive-council/executive-council.component.html
+++ b/src/app/pages/executive-council/executive-council.component.html
@@ -33,7 +33,7 @@
 					<img src="assets/images/executive_concil.jpg" alt="" >
 					<span class="concilia-caption" style="margin-bottom:20px;">
 						<i class="fa fa-camera"></i>
-						&nbsp;&nbsp;Primeira reunião do Conselho Executivo, em 1 de junho de 2017, na SREMG do DNIT.
+						&nbsp;&nbsp;Primeira reunião do Conselho Executivo na SREMG do DNIT.
 					</span>
 					<p class="font-124">Para minimizar os conflitos e facilitar o entendimento entre os diversos atores que compõem o Concilia BR-381 e Anel foi criado um Conselho Executivo, de caráter deliberativo, cuja principal função é buscar o consenso entre seus membros.</p>
 				</div>
