--- a/src/app/pages/home/about/about.component.html
+++ b/src/app/pages/home/about/about.component.html
@@ -112,7 +112,7 @@
 													<img src="assets/images/program.jpg" alt="" />
 													<span class="concilia-caption">
 														<i class="fa fa-camera"></i>
-														&nbsp;&nbsp;Algumas moradias chegam a ocupar a própria pista de acostamento da rodovia.
+														&nbsp;&nbsp;Casas ocupam a pista de acostamento da rodovia.
 													</span>
 												</div>
 											</div>
@@ -191,7 +191,7 @@
 													<img src="assets/images/conciliacao.jpg" alt="" />
 													<span class="concilia-caption">
 														<i class="fa fa-camera"></i>
-														&nbsp;&nbsp;Uma das conciliações realizadas no Núcleo de Conciliação(NUCON), da Justiça Federal, em agosto de 2015.
+														&nbsp;&nbsp;Conciliação no NUCON da Justiça Federal, em 2015.
 													</span>
 												</div>
 											</div>
