Formatando o texto do templte de community-detail e alterando a interface de comunidade para receber as fotos que devem ser inseridas na página

--- a/src/app/pages/community-detail/community-detail.component.html
+++ b/src/app/pages/community-detail/community-detail.component.html
@@ -24,8 +24,7 @@
                         <div class="col-sm-6">
 							<img alt="" src="{{community?.image}}">
                         </div><br>
-                        <div class="col-sm-6">
-                            <p class="font-124">{{community?.text}}</p>
+                        <div class="col-sm-6 p-text" [innerHTML]="community?.text" style="font-size: 1.24rem">
                         </div>
                     </div>
                 </div>
